[package]
name = "tdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.9.0"
gimli = "0.26.2"
hex = "0.4.3"
memmap2 = "0.5.7"
nix = "0.25.0"
object = "0.29.0"
once_cell = "1.14.0"
proc-maps = "0.2.1"
symbolic = { version = "9.1.1", default-features = false, features = [
    "demangle",
] }
syscalls = "0.6.6"

# TUI用
#tui = "0.17"
#crossterm = "0.22"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
