[package]
name = "tdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
env_logger = "0.11.3"
gimli = "0.28.1"
hex = "0.4.3"
memmap2 = "0.9.4"
nix = "0.28.0"
object = "0.34.0"
once_cell = "1.19.0"
proc-maps = "0.3.2"
symbolic = { version = "9.2.1", default-features = false, features = [
    "demangle",
] }
syscalls = "0.6.18"

# TUI用
#tui = "0.17"
#crossterm = "0.22"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"
